# cgmonitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  settings.json
api/: README.md  server.c  server.h
api/include/: handler.h  utils.h
api/source/: handler.c  server.c  utils.c
collector/: collector.c  collector.h  parsers.c  parsers.h
collector/include/: collector.h
collector/source/: collector.c  parsers.c
entry/: main.c  settings.c  settings.h
shared/asic/: CMakeLists.txt  asic_info.c  asic_info.h  miner_info.c  miner_info.h
storage/: README.md  cache.c  cache.h  crud.c  crud.h  database.c  database.h  storage.h
storage/include/: cache.h  database.h  storage.h
storage/source/: cache.c  database.c  storage.c
tests/: cgminer_mock.py
